# push_dash

./: requirements.txt  test_integration.md
backend/: README.md  app.py  config.yaml  dashboard.db  dashboard.db-shm  dashboard.db-wal  dataset_config.py  db.py  pyproject.toml
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/cli_tool/: __init__.py  bulk_export.py  bulk_process.py
backend/csv_data/: controls.csv  external_loss.csv  external_losses.csv  internal_loss.csv  internal_losses.csv  issues.csv  mock_data.py
backend/dao/: __init__.py  base.py  controls.py  external_loss.py  internal_loss.py  issues.py
backend/models/: __init__.py  controls.py  external_loss.py  internal_loss.py  issues.py  shared.py
backend/routers/: __init__.py  controls.py  external_loss.py  internal_loss.py  issues.py
backend/services/: __init__.py  llm_client.py  mock_ai.py  resolver.py
backend/utils/: __init__.py  batch_utils.py  csv_ingest.py  taxonomy.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  Dashboard.js
frontend/src/api/: axiosClient.js  controls.js  externalLoss.js  internalLoss.js  issues.js
frontend/src/components/: Badge.js  DataTable.js  DetailDrawer.js  JsonBlock.js  SearchBar.js  Section.js
